// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Stepper /> component when the orientation is horizontal should render using flex direction row 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 32px;
  list-style: none;
}

@media only screen and (min-width: 768px) {
  .emotion-0 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
  }
}

<div>
  <ul
    class="emotion-0 emotion-1"
    data-testid="default-stepper"
    orientation="horizontal"
  >
    <li>
      Item 1
    </li>
    <li>
      Item 2
    </li>
  </ul>
</div>
`;

exports[`<Stepper /> component when the orientation is vertical should render using flex direction column 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 32px;
  list-style: none;
}

@media only screen and (min-width: 768px) {
  .emotion-0 {
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
  }
}

<div>
  <ul
    class="emotion-0 emotion-1"
    data-testid="default-stepper"
    orientation="vertical"
  >
    <li>
      Item 1
    </li>
    <li>
      Item 2
    </li>
  </ul>
</div>
`;
